update press release page with new content

--- a/apps/pattern-lab/src/_patterns/04-pages/100-d8-Press-and-Media/d8-press-details.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/100-d8-Press-and-Media/d8-press-details.twig
@@ -21,102 +21,72 @@
       } only %}
 
       {% include "@bolt-components-headline/headline.twig" with {
-        "text": "Despite Fears, Executives Believe AI and Robotics Could Change Workplace for the Better, Says Pega Research",
+        "text": "Pegasystems Launches Pega Community to Empower Anyone to Create Better Software",
         "size": "xxxlarge"
       } only %}
 
       {% include "@bolt-components-headline/subheadline.twig" with {
-        "text": "Study finds teaming machine intelligence with humans can help organizations embrace a new era of efficient and meritocratic workforces",
+        "text": "New community fosters collaborative approach to developing Pega apps for both experienced and new developers",
         "size": "xxlarge"
       } only %}
 
       {% grid "o-bolt-grid--matrix o-bolt-grid--large" %}
         {% cell 'u-bolt-width-1/1 u-bolt-width-8/12@medium' %}
 
-          {% include "@bolt-components-headline/text.twig" with {
-            "text": "CAMBRIDGE, Mass. – January 22, 2018 – Organizations believe that pairing humans alongside machine intelligence will create a more effective, engaged, and meritocratic workforce, according to a new global study released by Pegasystems Inc. (NASDAQ: PEGA), the software company empowering customer engagement at the world’s leading enterprises. Pega surveyed 845 senior executives working globally across key industry sectors, including financial services, insurance, manufacturing, retail, telecommunications and media, and government, on the increased role artificial intelligence (AI) and robotic automation will play in the workplace of the future."
+          <p>
+          <strong>LAS VEGAS – June 5, 2018</strong> – <a href="#">Pegasystems Inc.</a> (NASDAQ: PEGA), the software company empowering customer engagement at the world’s leading enterprises, today announced <a href="#">Pega Community</a>, an open online community empowering Pega users of all experience levels to build better software without coding. This new community allows anyone – from novice to expert – to access the latest resources and tutorials to unlock the power of <a href="#">Pega Infinity</a>™, Pega’s next generation digital transformation suite.
+          </p>
+          {# {% include "@bolt-components-headline/text.twig" with {
+            "text": "LAS VEGAS – June 5, 2018 – Pegasystems Inc. (NASDAQ: PEGA), the software company empowering customer engagement at the world’s leading enterprises, today announced Pega Community, an open online community empowering Pega users of all experience levels to build better software without coding. This new community allows anyone – from novice to expert – to access the latest resources and tutorials to unlock the power of Pega Infinity™, Pega’s next generation digital transformation suite."
+          } only %} #}
+          
+        <div class="u-bolt-margin-bottom-medium">
+          {% include '@bolt-components-image/image.twig' with {
+            src: "https://pbs.twimg.com/media/De8QS1iUwAEHfJu.jpg",
+            alt: "Pega Community homepage",
+            lazyload: true,
           } only %}
+        </div>
 
           {% include "@bolt-components-headline/text.twig" with {
-            "text": "The survey uncovered widespread belief that machine intelligence will work ubiquitously alongside humans over time – so much so that seven out of 10 respondents (69 percent) believe the term ‘workforce’ will evolve to encapsulate both humans and machine intelligence. They also expect AI-augmented employees to generate tangible business returns such as more efficiency (73 percent agree) and better customer service (62 percent). But the effects may extend even deeper as AI transforms the way people work, are managed, and rewarded."
+            "text": "As organizations race to digitally transform their businesses, people with the skills to rapidly create the required solutions are in high demand. Pega Community aims to change how software gets built and redefine who gets to build it by providing an engaging educational resource for Pega’s no-code development environment. From business users to veteran developers, the site offers valuable resources to quickly drive successful digital transformation projects from start to finish. Members can stay current with Pega technology, enhance existing skills, and take their careers to the next level. Pega Community allows developers to network with each other to share ideas and discuss projects, while providing Pega clients with a prime resource to find people with the necessary skills needed for their next project."
           } only %}
 
           {% include "@bolt-components-headline/headline.twig" with {
-            "text": "Empowering employees with more autonomy",
-            "size": "xlarge"
+            "text": "Find out what's new",
+            "size": "large"
           } only %}
 
           {% include "@bolt-components-headline/text.twig" with {
-            "text": "By augmenting their work with machine intelligence, human employees will be empowered with more autonomy and a greater sense of job satisfaction, according to the survey:"
+            "text": "Pega Community is open today and offers the following:"
           } only %}
 
-          {% include "@bolt-components-unordered-list/unordered-list.twig" with {
-            "contentItems" : [
-              {
-                "text": "AI and robotic automation will allow staff to make more informed decisions and lead to a flattening of traditional management hierarchies, according 8 out of 10 respondents (78 percent)."
-              },
-              {
-                "text": "AI will help suggest next best actions for most customer service agents within the next five years, according to more than three quarters (77 percent) of respondents."
-              },
-              {
-                "text": "While 88 percent are comfortable working together with machines, they are less enthusiastic about being managed by them: four out of five (79 percent) say they would not be comfortable with an AI-powered boss."
-              }
-            ]
-          } only %}
+          <div class="u-bolt-margin-bottom-medium">
+            {% include "@bolt-components-unordered-list/unordered-list.twig" with {
+              "contentItems" : [
+                {
+                  "text": "Pega Launchpad: New Pega users can engage with several core ‘missions’ to help familiarize them with Pega and accelerate their learning – at their own pace. These missions include a look at key Pega capabilities such as artificial intelligence (AI) and robotics; designing effective applications to meet users’ goals; tips on leveraging Pega Community; and more. Users will soon be able to earn badges they can attach to their profiles as they complete courses, learn new skills, and quickly gain confidence to develop solutions on their own."
+                },
+                {
+                  "text": "Pega Community Profiles and ”Find a Pega Pro”: Newly expanded profile pages enable Pega Community members to build their personal Pega brand and connect with other developers and potential employers. Profiles include project history, areas of expertise, and availability status for new projects. Additionally, users can showcase their achievements with their official verified Pega certifications, as well as badges earned from completing courses, attending events and seminars, demonstrating product knowledge, and more. Through the new “Find a Pega Pro” tool, Pega’s industry-leading clients – representing some of the most successful companies in the world – can search within their own organizations to find available Pega developers who match the skills and qualifications they’re seeking. This tool will help Pega Community members looking for their next project to market their skills and find exciting new career opportunities."
+                },
+                {
+                  "text": "Project Hub: Project Hub gives users a comprehensive, centralized source of information, guidance, and tools needed to run successful Pega projects. These continuously updated resources – from basic to advanced articles, to templates and role-specific resources – bolster success by helping users accelerate projects, ensure app quality and relevance, and drive agility. The information is structured around the project lifecycle and key capabilities for fast and easy reference. For the first time, users have access to all the delivery insights cultivated from more than 35 years of Pega consulting projects."
+                }
+              ]
+            } only %}
+          </div>
 
-          {% include "@bolt-components-headline/headline.twig" with {
-            "text": "Establishing a more transparent, meritocratic workplace",
-            "size": "xlarge"
-          } only %}
+          {# {% include "@bolt-components-headline/text.twig" with {
+            "text": "Pega Community will be debuted during today’s keynote presentation at PegaWorld — Pega’s annual conference being held through June 6 in Las Vegas. To join Pega Community, please visit <a href="https://community.pega.com/">https://community.pega.com/</a>."
+          } only %} #}
 
-          {% include "@bolt-components-headline/text.twig" with {
-            "text": "As organizations increasingly come under scrutiny on equal pay for equal work issues, the study found the use of unbiased machine intelligence to analyze employee effectiveness could be the key to leveling the playing field:"
-          } only %}
-
-          {% include "@bolt-components-unordered-list/unordered-list.twig" with {
-            "contentItems" : [
-              {
-                "text": "Two thirds (66 percent) believe the widespread use of AI will give rise to a more transparent meritocracy in the workplace."
-              },
-              {
-                "text": "Almost three quarters (74 percent) think that within 10 years, AI will become standard practice for evaluating employee performance, while 72 percent predict it will be commonly used to set appropriate rewards and compensation."
-              },
-              {
-                "text": "Eighty-four percent agree it will be commonplace for AI to calculate the true value added by each worker within a decade, while 44 percent see this happening within five years."
-              }
-            ]
-          } only %}
-
-          {% include "@bolt-components-headline/headline.twig" with {
-            "text": "Leveraging machine intelligence to manage the gig economy",
-            "size": "xlarge"
-          } only %}
-
-          {% include "@bolt-components-headline/text.twig" with {
-            "text": "Respondents expect the number of permanent employees at Fortune 500 companies to be cut in half by 2030. But while this shift to the so-called gig economy brings new flexibility to employers to hire on demand, it also opens new challenges:"
-          } only %}
-
-          {% include "@bolt-components-unordered-list/unordered-list.twig" with {
-            "contentItems" : [
-              {
-                "text": "Eighty-five percent expect the use of more flexible, freelance customer service staff will make it easier to provide customers with 24/7 service, while 82 percent forecast faster response times as a direct result."
-              },
-              {
-                "text": "Conversely, 81 percent believe this shift toward temporary staff will make it harder to cultivate an ongoing culture of customer centricity."
-              },
-              {
-                "text": "The gig economy makes it more important to pair humans with AI to ensure consistent quality service. For example, nine out of 10 will use analytics to ensure customers receive the same level of personalization from one worker to another."
-              }
-            ]
-          } only %}
-
-          {% include "@bolt-components-headline/text.twig" with {
-            "text": "To see the complete data from the study, download “The Future of Work” report at: www.pega.com/marketforce-future-of-work."
-          } only %}
+          <p>Pega Community will be debuted during today’s keynote presentation at PegaWorld — Pega’s annual conference being held through June 6 in Las Vegas. To join Pega Community, please visit <a href="https://community.pega.com/">https://community.pega.com/</a>.
+          </p>
 
           {% include "@bolt-components-headline/headline.twig" with {
             "text": "Quotes & Commentary",
-            "size": "xlarge"
+            "size": "large"
           } only %}
 
           {% include "@bolt-components-headline/text.twig" with {
@@ -139,21 +109,24 @@
             {% cell "u-bolt-width-1/1" %}
               <div class="c-bolt-card">
                 <div class="c-bolt-card__body">
-                  {% include "@bolt-components-headline/headline.twig" with {
-                    "text": "Press Kit",
-                    "size": "xlarge"
-                  } only %}
+                  <div class="u-bolt-margin-bottom-xsmall">
+                    {% include "@bolt-components-headline/headline.twig" with {
+                      "text": "Press Kit",
+                      "size": "large",
+                    } only %}
+                  </div>
+                  
 
                   {% include "@bolt/ui-list.twig" with {
-                    "size": "xsmall",
+                    "size": "small",
                     "contentItems": [
                       {
                         "contentItems": [
                           {
                             "pattern": "headline",
                             "text": "Corporate Fact Sheet",
-                            "size": "small",
-                            "url": "https://www.pega.com",
+                            "size": "xsmall",
+                            "url": "#",
                             "icon": {
                               "name": "chevron-right"
                             }
@@ -165,8 +138,8 @@
                           {
                             "pattern": "headline",
                             "text": "Management Team",
-                            "size": "small",
-                            "url": "https://www.pega.com",
+                            "size": "xsmall",
+                            "url": "#",
                             "icon": {
                               "name": "chevron-right"
                             }
@@ -178,8 +151,8 @@
                           {
                             "pattern": "headline",
                             "text": "YouTube Channel",
-                            "size": "small",
-                            "url": "https://www.pega.com",
+                            "size": "xsmall",
+                            "url": "#",
                             "icon": {
                               "name": "chevron-right"
                             }
@@ -191,8 +164,8 @@
                           {
                             "pattern": "headline",
                             "text": "Analyst Coverage",
-                            "size": "small",
-                            "url": "https://www.pega.com",
+                            "size": "xsmall",
+                            "url": "#",
                             "icon": {
                               "name": "chevron-right"
                             }
@@ -207,7 +180,7 @@
             {% cell "u-bolt-width-1/1" %}
               {% include "@bolt-components-headline/headline.twig" with {
                 "text": "Media Contacts",
-                "size": "xlarge"
+                "size": "large"
               } only %}
 
               <p class="c-bolt-text">
@@ -222,7 +195,7 @@
 
               {% include "@bolt-components-headline/headline.twig" with {
                 "text": "North America",
-                "size": "large"
+                "size": "small"
               } only %}
 
               <p class="c-bolt-text">
@@ -247,7 +220,7 @@
 
               {% include "@bolt-components-headline/headline.twig" with {
                 "text": "Europe",
-                "size": "large"
+                "size": "small"
               } only %}
 
               <p class="c-bolt-text">
