docs: update all urls in PL docs to be hash bangs (BDS-435)

--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/00-action-blocks-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/00-action-blocks-docs.twig
@@ -3,7 +3,7 @@
   contentItems: [
     {
       text: "Item 1",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "icon-name",
         size: "large",
@@ -12,7 +12,7 @@
     },
     {
       text: "Item 2",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "icon-name",
         size: "large",
@@ -21,7 +21,7 @@
     },
     {
       text: "Item 3",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "icon-name",
         size: "large",
