--- a/apps/pattern-lab/src/_patterns/02-components/card/00-card-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/card/00-card-docs.twig
@@ -1,6 +1,6 @@
 {% set usage %}{% verbatim %}
 {% include "@bolt-components-card/card.twig" with {
-  url: "javascript:",
+  url: "#!",
   contentItems: [
     {
       pattern: "image",
