--- a/apps/pattern-lab/src/_patterns/02-components/chip/00-chip-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/chip/00-chip-docs.twig
@@ -1,7 +1,7 @@
 {% set usage %}{% verbatim %}
 {% include "@bolt-components-chip/chip.twig" with {
   text: "This is a chip",
-  url: "http://google.com",
+  url: "#!",
 } only %}
 {% endverbatim %}{% endset %}
 
