--- a/apps/pattern-lab/src/_patterns/02-components/chips-list/00-chip-list-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/chips-list/00-chip-list-docs.twig
@@ -3,15 +3,15 @@
   contentItems: [
     {
       text: "Chip 1",
-      url: "http://google.com"
+      url: "#!"
     },
     {
       text: "Chip 2",
-      url: "http://google.com"
+      url: "#!"
     },
     {
       text: "Chip 3",
-      url: "http://google.com"
+      url: "#!"
     }
   ]
 } only %}
