--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
@@ -9,15 +9,15 @@
       links: [
         {
         text: "Link 1 Text",
-        url: "#link-1-url"
+        url": "#!"
       },
       {
         text: "Link 2 Text",
-        url: "#link-2-url"
+        url": "#!"
       },
       {
         text: "Link 3 Text",
-        url: "#link-3-url"
+        url": "#!"
       }
       ]
     } %}
@@ -32,15 +32,15 @@
     links: [
       {
         text: "Link 1 Text",
-        url: "#link-1-url"
+        url": "#!"
       },
       {
         text: "Link 2 Text",
-        url: "#link-2-url"
+        url": "#!"
       },
       {
         text: "Link 3 Text",
-        url: "#link-3-url"
+        url": "#!"
       }
     ]
   } only %}
