--- a/apps/pattern-lab/src/_patterns/02-components/link/00-link-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/link/00-link-docs.twig
@@ -1,7 +1,7 @@
 {% set usage %}{% verbatim %}
 {% include "@bolt-components-link/link.twig" with {
   text: "This is a link",
-  url: "http://google.com"
+  url: "#!"
 } only %}
 {% endverbatim %}{% endset %}
 
