--- a/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
@@ -3,7 +3,7 @@
   items: [
     include("@bolt-components-link/link.twig", {
       text: "Link 1",
-      url: "#",
+      url: "#!",
       icon: {
         name: "chevron-right",
         position: "before"
@@ -11,7 +11,7 @@
     }),
     include("@bolt-components-link/link.twig", {
       text: "Link 2",
-      url: "#",
+      url: "#!",
       icon: {
         name: "chevron-right",
         position: "before"
@@ -19,7 +19,7 @@
     }),
     include("@bolt-components-link/link.twig", {
       text: "Link 3",
-      url: "#",
+      url: "#!",
       icon: {
         name: "chevron-right",
         position: "before"
