--- a/apps/pattern-lab/src/_patterns/02-components/form/00-form-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/form/00-form-docs.twig
@@ -1,7 +1,7 @@
 {% set usage %}{% verbatim %}
 {% include "@bolt-components-form/form.twig" with {
   text: "This is a form",
-  url: "http://google.com",
+  url: "#!",
 } only %}
 {% endverbatim %}{% endset %}
 
