--- a/apps/pattern-lab/src/_patterns/02-components/navbar/00-navbar-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/00-navbar-docs.twig
@@ -10,15 +10,15 @@
   links: [
     {
       text: "Link 1 Text",
-      url: "link-1-url"
+      url": "#!"
     },
     {
       text: "Link 2 Text",
-      url: "link-2-url"
+      url": "#!"
     },
     {
       text: "Link 3 Text",
-      url: "link-3-url"
+      url": "#!"
     }
   ]
 } only %}
